      snapshot upon initial site creation. Matter of fact when run in a unit 
      test situation, addConfiguredSite can throw permission errors during the
      snapshot-taking because no specific SecurityManager has been set up.
      Add new flag "snapshot" to factory.addConfiguredSite to turn off
      snapshotting if desired

  Bug Fixes

    - CMFSetup: Reduced probability of profile ID conflicts.
      The first argument of 'registerProfile' is now 'name' instead of
      'profile_id'. The profile ID combines 'name' and 'product'.

    - CMFSetup.skins made the assumption that the CMF site can always
      acquire REQUEST and would set up the current skin with it. Added a test
      to see if REQUEST is available and if it is not, skip the step that
      sets up the current skin.

    - CMFCalendar zpt skin: Removed dependency on dtml layer.

    - CMFCalendar: Modified install script.
      Adds date indexes instead of field indexes. No longer adds the dtml
      layer to zpt skins.

    - CMFCore.utils: Added 'transaction' for backwards compatibility.
      CMF now uses the Zope 2.8 transaction API und uses utils.transaction as
      fallback in Zope 2.7.

    - CMFCore.TypesTool: Added backwards compatibility code to the fix for
      collector issue 49 (http://collector.zope.org/CMF/49)

    - CMFCore.Skinnable: Changed the way layers (skindata) are stored
      (no more _v_ attribute) to prevent them being lost in the middle
      of a request when memory pressure is high. This change is
      incompatible with SpeedPack, but includes one of its two
      optimizations about skins. (http://collector.zope.org/CMF/198)

    - DublinCore: Fixed creators upgrade to not call a potentially
      costly method on the user folder.
      (http://zope.org/Collectors/CMF/300)

    - CMFCatalogAware: When reindexing security, all subobjects must be
      reindexed even if they are not visible by the current user.

CMF 1.5.1beta (2005/03/24)

  New Features
